--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
   }
   .container {
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .header {
     font-size: 4rem;
