--- a/style.css
+++ b/style.css
@@ -39,3 +39,25 @@
     color: white;
     font-family: 'Inter', sans-serif;
   }
+  .card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: rgba(29,75,64,0.1);
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,0.125);
+  }
+  .card-header {
+    padding: 2.5rem 2.5rem;
+    margin-bottom: 0;
+    border-bottom: 0 solid rgba(0,0,0,0.125);
+}
+.card-footer {
+  padding: 2.5rem 2.5rem;
+  border-top: 0 solid rgba(0,0,0,0.125);
+}
+.card-container{
+  display: flex;
+}
