--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
   }
   
   /* Navbar links */
@@ -63,4 +64,39 @@
   .iconSize{
     width: 3em;
     height: 3em;
+  }
+  .gallery-text {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    min-width: 70%;
+  }
+  .gallery-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 70%;
+    min-width: 75vh;
+    min-height: 70vh;
+    gap: 50px;
+    flex: 0 0;
+  }
+  .gallery-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 70vh;
+    min-height: 70vh;
+
+  }
+  .gallery-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .gallery-container-container {
+    display: flex;
+    min-width: 70%;
+    justify-content: center;
   }
