--- a/style.css
+++ b/style.css
@@ -95,8 +95,56 @@
     height: 100%;
     object-fit: cover;
   }
+
   .gallery-container-container {
     display: flex;
     min-width: 70%;
     justify-content: center;
   }
+
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .form-row {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .form-control {
+    display: block;
+    width: 100%;
+    padding: 1rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #000;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+}
+
+.form-label {
+  margin-bottom: .25rem;
+  font-size: .875rem;
+  color: #555;
+  font-family: 'Inter', sans-serif; font-weight: 400; font-size: 1rem; margin: 0px;
+}
+
+.form-check-label {
+  color: #777;
+}
+
+.btn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 28px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  background: #2196F3;
+  color: white;
+  text-decoration: none;
+}
