--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@
     justify-content: center;
     align-items: center;
   }
+
   .container {
     min-height: 100vh;
     display: flex;
@@ -65,6 +66,18 @@
     width: 3em;
     height: 3em;
   }
+
+  .gallery-section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eee;
+    flex-direction: column; 
+    min-height: 250vh; 
+    gap: 50px;
+  }
+
   .gallery-text {
     display: flex;
     text-align: center;
@@ -188,4 +201,40 @@ footer {
   color: white;
   text-align: center;
   text-decoration: none;
+}
+
+.font {
+  font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem;
+}
+
+.sentence  {
+  font-family: 'Inter', sans-serif; font-weight: 500; font-size: 3rem; margin-top: 0;
+}
+
+.input-cursor {
+  display: inline-block;
+  width: 2px;
+  height: 42px;
+  background-color: black;
+  margin-left: 2px;
+  animation: blink .6s linear infinite alternate;
+}
+
+@keyframes blink {
+  0% {opacity: 1;}
+  40% {opacity: 1;}
+  60% {opacity: 0;}
+  100% {opacity: 0;}
+}
+
+@media (max-width: 390px) {
+  .card-container {
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 50px;
+  }
+  .card {
+    max-width: 90%;
+    margin-left: 5%;
+  }
 }
